--- a/html/index.html
+++ b/html/index.html
@@ -40,11 +40,11 @@
     </header>
     <main>
       <section class="container py-2">
-        <h5>Lorem</h5>
-        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quidem ab nulla dolorem, autem voluptates aperiam illo impedit quibusdam mollitia temporibus a, repellendus ipsa non alias numquam magnam accusantium ducimus!
+        <h5 class="text-primary fw-bolder">Lorem</h5>
+        <p class="text-primary-emphasis">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quidem ab nulla dolorem, autem voluptates aperiam illo impedit quibusdam mollitia temporibus a, repellendus ipsa non alias numquam magnam accusantium ducimus!
         Accusantium quo hic, quidem ea suscipit quas eveniet quibusdam sed debitis inventore voluptatum reprehenderit praesentium velit recusandae maiores deleniti illum maxime molestias minus. Deleniti, repudiandae. Quae temporibus accusamus sed nulla.
         Vero, natus aliquid neque eum, quisquam harum voluptatibus nihil recusandae quis est eos architecto eligendi. Commodi quae dolores consectetur vero saepe iste recusandae at? Exercitationem ea vero repellat veritatis alias.</p>
-        <h5>Cards</h5>
+        <h5 class="text-primary fw-bolder">Cards</h5>
       </section>
       <section class="container row g-2 m-auto d-flex justify-content-center align-items-center">
           <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
